# gitkcli

./: .coveragerc  .gitignore  README.md  __init__.py  check.sh  config.py  gitkcli.py  pyproject.toml  setup.py
controllers/: __init__.py  app_controller.py  key_handler.py
demos/: QUICKSTART.md  README.md  demo_0_showcase.py  demo_1_basic_list.py  demo_2_interactive_segments.py  demo_3_windows.py  demo_4_text_input.py  demo_5_dashboard.py  launcher.py
gitk/: __init__.py  app.py  config.py  dialogs.py  diff_target.py  ids.py  input.py  items.py  jobs.py  list_view.py  log.py  main.py  message_box.py  screen.py  segmented_items.py  segments.py  split_layout.py  view.py  views.py
gitk/views/: __init__.py  context_menu.py  git_diff.py  git_log.py  git_refs.py  log.py
models/: __init__.py  commit.py  repository.py
ralph/: PLAN.md  PROGRESS.md  STRUCTURE.md
test/: .gitignore  ENVIRONMENT  README.md  conftest.py  create_test_repo.sh  dsl.py  harness.py  requirements.txt  run.py  test_units.py
test/cases/cherry_conflict/: spec.txt
test/cases/cherry_wip_pick/: spec.txt
test/cases/clean_staged/: spec.txt
test/cases/clean_unstaged/: spec.txt
test/cases/close_button_quit/: spec.txt
test/cases/combo_resize_split/: spec.txt
test/cases/ctrl_o_jump/: spec.txt
ui/: __init__.py  context.py  items.py  list_view.py  screen.py  segmented_items.py  segments.py  view.py
utils/: __init__.py  clipboard.py  date_parser.py  display.py
views/: __init__.py  base_view.py  blame_view.py  command_output_view.py  commit_view.py  diff_view.py  help_view.py  loading_view.py
(+272 files in other folders)
